// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListHeader matches the snapshot 1`] = `
<table>
  <ListHeader
    orderBy={null}
    setOrderBy={[MockFunction]}
  >
    <thead>
      <tr>
        <ListHeaderCell
          orderBy={null}
          setOrderBy={[MockFunction]}
          title="Topic Name"
          value="NAME"
        >
          <th
            className="is-clickable"
            onClick={[Function]}
          >
            Topic Name
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-sort"
              />
            </span>
          </th>
        </ListHeaderCell>
        <ListHeaderCell
          orderBy={null}
          setOrderBy={[MockFunction]}
          title="Total Partitions"
          value="TOTAL_PARTITIONS"
        >
          <th
            className="is-clickable"
            onClick={[Function]}
          >
            Total Partitions
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-sort"
              />
            </span>
          </th>
        </ListHeaderCell>
        <ListHeaderCell
          orderBy={null}
          setOrderBy={[MockFunction]}
          title="Out of sync replicas"
          value="OUT_OF_SYNC_REPLICAS"
        >
          <th
            className="is-clickable"
            onClick={[Function]}
          >
            Out of sync replicas
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-sort"
              />
            </span>
          </th>
        </ListHeaderCell>
        <th>
          Type
        </th>
        <th>
           
        </th>
      </tr>
    </thead>
  </ListHeader>
</table>
`;

exports[`ListHeader on column click matches the snapshot 1`] = `
<th
  className="is-clickable has-text-link-dark"
  onClick={[Function]}
>
  Topic Name
  <span
    className="icon is-small"
  >
    <i
      className="fas fa-sort"
    />
  </span>
</th>
`;

exports[`ListHeader on column click matches the snapshot 2`] = `
<th
  className="is-clickable has-text-link-dark"
  onClick={[Function]}
>
  Total Partitions
  <span
    className="icon is-small"
  >
    <i
      className="fas fa-sort"
    />
  </span>
</th>
`;

exports[`ListHeader on column click matches the snapshot 3`] = `
<th
  className="is-clickable has-text-link-dark"
  onClick={[Function]}
>
  Out of sync replicas
  <span
    className="icon is-small"
  >
    <i
      className="fas fa-sort"
    />
  </span>
</th>
`;
